[package]
name        = "reqwest-helper"
version     = "0.1.0"
edition     = "2021"
authors     = ["Thomas VILLA <thomvil87@gmail.com>"]
description = "A wrapper for a reqwest-Client, with builtin cookie-store. Opinionated."
repository  = "https://github.com/thomvil/reqwest-helpers-rs/"
categories  = ["network", "library"]

[dependencies]
reqwest              = { version = "0.11.16", features = ["cookies", "deflate", "gzip", "brotli", "json"] }
reqwest_cookie_store = { version = "0.5.0"   }
serde                = { version = "1.0.160" }
serde_json           = { version = "1.0.96"  }